# tooth-call-ai

./: LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: config.py  main.py
app/api/media_stream/: routes.py  services.py
app/prompts/: prompt_file_paths.py
app/prompts/prompt_files/: find_calendar_entries.md  intro_speech.md  system.md
app/tools/: cal_tool.py  dummy_tool.py  notify_staff_tool.py
test_client/: local_test_client.py
